--- a/time_tracker.css
+++ b/time_tracker.css
@@ -22,7 +22,7 @@ html {font-family: helvetica, arial;}
 .htimeline .step.green { border-top-color: #348F50;}
 .htimeline .step.orange { border-top-color: #F09819;}
 .htimeline .step.red { border-top-color: #C04848;}
-.htimeline .step.blue { border-top-color: #49a09d;}
+.htimeline .step.blue { border-top-color: #337AB7;}
 
 .htimeline .step::before { width: 15px; height: 15px; border-radius: 50px; content: ' '; background-color: white; position: absolute; top: -10px; left: 0px; border-style: solid; border-width: 3px; transition: all 0.5s ease;}
 .htimeline .step:hover::before { width: 18px; height: 18px; bottom: -12px; }
