p7 submission ready. awaiting interactive graph addition

--- a/todo.css
+++ b/todo.css
@@ -1,18 +1,20 @@
-#todo{
-margin-top: 21px;
-}
 .checkbox{
   display:none;
 }
 
 .td{
+  margin-bottom:10px;
   display:none;
 }
 
 .task{
-  margin-bottom:10px;
+  margin-bottom:18px;
   display:none;
 }
 #taskShow{
-  margin-bottom:10px;
+  margin-bottom:18px;
+}
+
+.close {
+  font-size:40px;
 }
