--- a/time_tracker.css
+++ b/time_tracker.css
@@ -1,16 +1,17 @@
 body {
   /*min-height: 1000px;*/
+  font-family: "Trebuchet MS";
   padding-top: 70px;
 }
 .alert {
   display: none;
 }
-.alert:hover {
+/*.alert:hover {
   cursor:pointer
-}
+}*/
 
 h1{
-	margin-top:-30px;
+	margin-top:-5px;
 	text-align: center;
 }
 
