Update to HTTPS

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ page-type: post
 ---
 <main role="main" class="cf">
 <article class="posts">
- <article role="article" itemscope itemtype="http://schema.org/BlogPosting">
+ <article role="article" itemscope itemtype="https://schema.org/BlogPosting">
         <header>
             <h2>{{page.title}}</h2>
             <time itemprop="dateCreated" datetime="{{page.date}}">
