--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,5 +12,5 @@ layout: default
     </article>
     </article>
   </div>
-        {% include sidebar.html %}
+        <!--  include sidebar.html -->
 </main>
