--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -49,14 +49,15 @@
 
 // Component.
 
-	@import 'components/section';
-	@import 'components/icon';
-	@import 'components/list';
-	@import 'components/form';
 	@import 'components/box';
-	@import 'components/image';
-	@import 'components/table';
 	@import 'components/button';
+	@import 'components/form';
+	@import 'components/icon';
+	@import 'components/image';
+	@import 'components/list';
+	@import 'components/pagination';
+	@import 'components/section';
+	@import 'components/table';
 	@import 'components/tiles';
 
 // Layout.
