--- a/_includes/footer-post.html
+++ b/_includes/footer-post.html
@@ -1,5 +1,5 @@
 <footer role="contentinfo" id="footer">
-  <div class="top-link"><a href="#top">return to top</a></div>
+  <div class="top-link"><a href="#top">Return to Top</a></div>
 <div class="inner">
 <section>
   <h2>Follow</h2>
