--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,9 +42,9 @@
         <!-- Menu -->
         <nav role="navigation" id="menu">
           <ul>
-            <li><a href="{{site.baseurl}}/index.html" title="Return Home">Projects</a></li>
             <li><a href="{{site.baseurl}}/about.html" title="Learn More">About</a></li>
-            <li><a href="{{site.baseurl}}/tags/" title="Archive">Archive</a></li>
+            <li><a href="{{site.baseurl}}/index.html" title="Return Home">Projects</a></li>
+            <li><a href="{{site.baseurl}}/tags/" title="Archives">Archives</a></li>
           </ul>
         </nav>
 
